--- a/modules/reporte/marca/index.html
+++ b/modules/reporte/marca/index.html
@@ -6,7 +6,7 @@
 
 
     <meta charset="utf-8" />
-    <title>Mantenimiento Marcas</title>
+    <title>Reporte de Marcas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Ícono de la página -->
     <link rel="shortcut icon" href="../../../assets/images/pizza.png">
